# slack_like_project

backend/: .env  Cargo.toml
backend/.sqlx/: query-19c53b9a15798734fabfafa6822d2749a97146aa71256987e8c72ed4bc64167b.json  query-87400d71ff97bf8b8bbab261c0dc905f0e8821480f049c4c342fd005724b9875.json  query-af0bc93040a35f251067e2cfc12a488e771f70a228205b836cad89ecd7fe4dec.json  query-b0805c8c346c674713b87be21671dc6d53e647a16a794bd7872a53d2955e39f1.json
backend/migrations/: 20260419051354_create_messages_table.sql  20260421065815_create_channels_table.sql  20260527142314_create_users_table.sql
backend/src/: auth.rs  handler.rs  main.rs  models.rs  state.rs
backend/src/handlers/: auth.rs  channels.rs  mod.rs  ws.rs
backend/src/models/: channel.rs  message.rs  mod.rs  user.rs
frontend/: build_check.sh  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: ChatHeader.vue  ChatLayout.vue  CreateChannelModal.vue  LoginView.vue  MessageBubble.vue  MessageInput.vue  MessageList.vue  Sidebar.vue
frontend/src/composables/: useAppState.js  useChannels.js  useWebSocket.js
